--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-REACT_APP_BASE_URL=https://backend-sikemas.umkt.ac.id
-REACT_APP_BIMBINGAN_URL=https://service-bimbingan-pa.umkt.ac.id
-
+REACT_APP_BASE_URL=http://sikemahasiswaan.
+REACT_APP_BIMBINGAN_URL=http://apibimbingan.tiaka.web.id
 DISABLE_ESLINT_PLUGIN=false
