feat(export): Fix ExportToCSV and Fix Package.json

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.7"
+    "@types/file-saver": "^2.0.7",
+    "ajv": "^8.17.1"
   }
 }
